tests/lean/eval_expr_error.lean.expected.out
eval_expr_error.lean:5:8: error: invalid eval_expr, type must be a closed expression
eval_expr_error.lean:5:4: error: don't know how to synthesize placeholder
context:
A : Type,
tst1 : tactic unit,
a : expr
⊢ Type
eval_expr_error.lean:8:0: error: invalid eval_expr, type mismatch
state:
⊢ true
tactic failed
1
